# cudagrad

./: .gitignore  README.md  dev.yml  pyproject.toml  requirements.txt
cudagrad/: explore.ipynb  matmul.py  nn.py
cudagrad/engine/: tensor.py
cudagrad/kernels/: constants.py  matmul.py  utils.py
cudagrad/kernels/add/: __init__.py  add_2d.py  add_with_scalar.py
cudagrad/kernels/gradients/: __init__.py  power_grad.py  relu_grad.py
cudagrad/kernels/matmul/: __init__.py  matmul_2d.py
cudagrad/kernels/multiply/: __init__.py  multiply_2d.py
cudagrad/kernels/power/: __init__.py  power_2d.py
cudagrad/kernels/relu/: __init__.py  relu_2d.py
scripts/: format.sh  test.sh
src/: matmul.py
tests/: conftest.py  test_add.py  test_matmul.py  test_tensor.py
