[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cudagrad"
description = "A CUDA-accelerated gradient computation library"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Jonathan Sabbagh", email = "jonathan.sabbagh@shopify.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "torch",
    "numba",
    "numpy",
    "pandas",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

[tool.setuptools]
packages = ["cudagrad"]
